# nba_draft

./: .gitignore  app.py  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  debugger.md
.devcontainer/: devcontainer.json
data/: draft_results_20250908_192834.csv  draft_results_20250909_141235.csv  players.csv  state.json
pages/: 1_설정.py
src/: main_app.py
src/utils/: auction_manager.py  basketball_reference.py  data_manager.py  nba_data.py  team_updates.py
utils/: auction_manager.py  basketball_reference.py
