[project]
name = "nba-draft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "nba-api>=1.10.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
]
